--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="lose_score_message">Your Score: %d</string>
     <string name="win_score_message">New Record: %d</string>
     <string name="back_to_title">Back</string>
+    <string name="answer_correct_message">Correct! Go On!</string>
 </resources>
